# tablecheck

./: LICENSE  README.md  pyproject.toml
tablecheck/: __init__.py  cli.py  core.py
tests/: test_tablecheck.py
